Fix todo and horizontal scroll.

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -112,7 +112,6 @@ svg {
   display: inline-flex;
   flex-wrap: wrap;
   justify-content: center;
-  width: 900px;
   max-width: 100vw;
   margin-left: auto;
   margin-right: auto;
